修改systemconfig.rc  将隐藏的控件放在角落不使用

--- a/SN Writer.rc
+++ b/SN Writer.rc
@@ -475,80 +475,65 @@ BEGIN
     GROUPBOX        "Increase radix",IDC_STATIC,91,106,66,35
 END
 
-IDD_SYSTEM_CONFIG_DIALOG1 DIALOGEX 0, 0, 308, 353
+IDD_SYSTEM_CONFIG_DIALOG1 DIALOGEX 0, 0, 308, 238
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "System Config"
 FONT 4, "System", 0, 0, 0x1
 BEGIN
-    GROUPBOX        "Write Option",IDC_STATIC,8,3,100,117
     CONTROL         "Barcode",IDC_WRITE_BARC_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,12,88,8
-    CONTROL         "IMEI",IDC_WRITE_IMEI_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,24,88,8
-    CONTROL         "BT Address",IDC_WRITE_BT_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,36,88,8
-    CONTROL         "Wifi Address",IDC_WRITE_WIFI_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,48,88,8
+    CONTROL         "IMEI",IDC_WRITE_IMEI_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,243,3,56,8
+    CONTROL         "BT Address",IDC_WRITE_BT_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,211,3,88,8
+    CONTROL         "Wifi Address",IDC_WRITE_WIFI_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,211,3,88,8
     CONTROL         "Ethernet Mac Address",IDC_WRITE_ETHERNET_MAC_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,60,88,8
-    CONTROL         "DRMkey MCID",IDC_WRITE_DRMKEY_MCID_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,72,88,8
-    CONTROL         "MEID",IDC_WRITE_MEID_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,84,88,8
-    CONTROL         "ESN",IDC_WRITE_ESN_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,96,88,8
-    CONTROL         "Serial No.",IDC_WRITE_SERIAL_NO_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,108,88,8
-    GROUPBOX        "IMEI Option",IDC_STATIC,7,123,100,113
-    CONTROL         "IMEI CheckSum",IDC_IMEI_CHECKSUM,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,131,88,11
-    CONTROL         "IMEI Lock",IDC_IMEI_LOCK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,142,88,11
-    CONTROL         "Dual IMEI",IDC_DUAL_IMEI,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,153,88,11
-    CONTROL         "DualIMEI Same",IDC_DUAL_IMEI_SAME,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,29,164,65,11
-    CONTROL         "Three IMEI",IDC_THREE_IMEI,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,175,88,11
-    CONTROL         "Four IMEI",IDC_FOUR_IMEI,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,186,88,11
-    CONTROL         "Lock OTP",IDC_LOCK_OTP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,197,63,11
-    GROUPBOX        "Header Option",IDC_STATIC,133,3,166,233
-    LTEXT           "test",IDC_STATIC,115,20,55,8,0,WS_EX_RIGHT
-    EDITTEXT        IDC_BARC_HEADER_STR,178,18,50,12,ES_AUTOHSCROLL
-    CONTROL         "On/Off",IDC_BARC_HEADER_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,237,20,32,8
-    LTEXT           "BT Header:",IDC_STATIC,115,38,55,8,0,WS_EX_RIGHT
-    EDITTEXT        IDC_BT_HEADER_STR,178,36,50,12,ES_AUTOHSCROLL
-    CONTROL         "On/Off",IDC_BT_HEADER_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,237,38,32,8
-    LTEXT           "Wifi Header:",IDC_STATIC,115,56,55,8,0,WS_EX_RIGHT
-    EDITTEXT        IDC_WIFI_HEADER_STR,178,54,50,12,ES_AUTOHSCROLL
-    CONTROL         "On/Off",IDC_WIFI_HEADER_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,237,56,32,8
-    LTEXT           "IMEI_1 Header:",IDC_STATIC,115,74,55,8,0,WS_EX_RIGHT
-    EDITTEXT        IDC_IMEI_1_HEADER_STR,178,72,50,12,ES_AUTOHSCROLL
-    CONTROL         "On/Off",IDC_IMEI_1_HEADER_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,237,74,32,8
-    LTEXT           "IMEI_2 Header:",IDC_STATIC,115,92,55,8,0,WS_EX_RIGHT
-    EDITTEXT        IDC_IMEI_2_HEADER_STR,178,90,50,12,ES_AUTOHSCROLL
-    CONTROL         "On/Off",IDC_IMEI_2_HEADER_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,237,92,32,8
-    LTEXT           "IMEI_3 Header:",IDC_STATIC,115,110,55,8,0,WS_EX_RIGHT
-    EDITTEXT        IDC_IMEI_3_HEADER_STR,178,108,50,12,ES_AUTOHSCROLL
-    CONTROL         "On/Off",IDC_IMEI_3_HEADER_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,237,110,32,8
-    LTEXT           "IMEI_4 Header:",IDC_STATIC,115,128,55,8,0,WS_EX_RIGHT
-    EDITTEXT        IDC_IMEI_4_HEADER_STR,178,126,50,12,ES_AUTOHSCROLL
-    CONTROL         "On/Off",IDC_IMEI_4_HEADER_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,237,128,32,8
-    LTEXT           "Serial Header:",IDC_STATIC,115,146,55,8,0,WS_EX_RIGHT
-    EDITTEXT        IDC_SERIAL_NO_HEADER_STR,178,144,50,12,ES_AUTOHSCROLL
-    CONTROL         "On/Off",IDC_SERIAL_NO_HEADER_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,237,146,32,8
-    LTEXT           "Ethernet Header:",IDC_STATIC,115,164,55,8,0,WS_EX_RIGHT
-    EDITTEXT        IDC_ETHERNET_HEADER_STR,178,162,50,12,ES_AUTOHSCROLL
-    CONTROL         "On/Off",IDC_ETHERNET_HEADER_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,237,164,32,8
-    LTEXT           "MCID Header:",IDC_STATIC,115,182,55,8,0,WS_EX_RIGHT
-    EDITTEXT        IDC_DRMKEY_MCID_HEADER_STR,178,180,50,12,ES_AUTOHSCROLL
-    CONTROL         "On/Off",IDC_DRMKEY_MCID_HEADER_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,237,182,32,8
-    LTEXT           "MEID:",IDC_STATIC,115,200,55,8,0,WS_EX_RIGHT
-    EDITTEXT        IDC_MEID_HEADER_STR,178,198,50,12,ES_AUTOHSCROLL
-    CONTROL         "On/Off",IDC_MEID_HEADER_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,237,200,32,8
-    LTEXT           "MSN:",IDC_STATIC,115,218,55,8,0,WS_EX_RIGHT
-    EDITTEXT        IDC_ESN_HEADER_STR,178,216,50,12,ES_AUTOHSCROLL
-    CONTROL         "On/Off",IDC_ESN_HEADER_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,237,218,32,8
-    GROUPBOX        "DataBase File",IDC_STATIC,7,239,292,70
-    CONTROL         "Load AP DB from DUT",IDC_APDB_FROM_DUT_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,248,103,10
-    CONTROL         "Load Modem DB from DUT",IDC_MDDB_FROM_DUT_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,128,248,103,10
-    EDITTEXT        IDC_MD_1_DBFILE_PATH,12,261,225,12,ES_AUTOHSCROLL | ES_READONLY
-    PUSHBUTTON      "MD1_DB",IDC_BTN_MD1,240,261,32,12
-    EDITTEXT        IDC_MD_2_DBFILE_PATH,12,277,225,12,ES_AUTOHSCROLL | ES_READONLY
-    PUSHBUTTON      "MD2_DB",IDC_BTN_MD2,240,277,32,12
-    EDITTEXT        IDC_AP_DBFILE_PATH,12,292,225,12,ES_AUTOHSCROLL | ES_READONLY
-    PUSHBUTTON      "AP_DB",IDC_BTN_AP,240,292,32,12
-    LTEXT           "Log Dir",IDC_STATIC,7,314,29,8
-    EDITTEXT        IDC_LOG_DIR,36,313,226,12,ES_AUTOHSCROLL | ES_READONLY
-    PUSHBUTTON      "...",IDC_BTN_LOG,285,313,14,12
-    PUSHBUTTON      "Save",IDC_BTN_SAVE,72,330,140,17
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,211,3,88,8
+    CONTROL         "DRMkey MCID",IDC_WRITE_DRMKEY_MCID_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,211,3,88,8
+    CONTROL         "MEID",IDC_WRITE_MEID_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,211,3,88,8
+    CONTROL         "ESN",IDC_WRITE_ESN_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,211,3,88,8
+    CONTROL         "Serial No.",IDC_WRITE_SERIAL_NO_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,211,3,88,8
+    CONTROL         "IMEI CheckSum",IDC_IMEI_CHECKSUM,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,211,3,88,11
+    CONTROL         "IMEI Lock",IDC_IMEI_LOCK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,211,3,88,11
+    CONTROL         "Dual IMEI",IDC_DUAL_IMEI,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,211,3,88,11
+    CONTROL         "DualIMEI Same",IDC_DUAL_IMEI_SAME,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,215,3,65,11
+    CONTROL         "Three IMEI",IDC_THREE_IMEI,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,211,3,88,11
+    CONTROL         "Four IMEI",IDC_FOUR_IMEI,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,211,3,88,11
+    CONTROL         "Lock OTP",IDC_LOCK_OTP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,236,3,63,11
+    EDITTEXT        IDC_BARC_HEADER_STR,249,3,50,12,ES_AUTOHSCROLL
+    CONTROL         "On/Off",IDC_BARC_HEADER_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,267,3,32,8
+    EDITTEXT        IDC_BT_HEADER_STR,249,3,50,12,ES_AUTOHSCROLL
+    CONTROL         "On/Off",IDC_BT_HEADER_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,267,3,32,8
+    EDITTEXT        IDC_WIFI_HEADER_STR,249,3,50,12,ES_AUTOHSCROLL
+    CONTROL         "On/Off",IDC_WIFI_HEADER_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,259,3,32,8
+    EDITTEXT        IDC_IMEI_1_HEADER_STR,249,3,50,12,ES_AUTOHSCROLL
+    CONTROL         "On/Off",IDC_IMEI_1_HEADER_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,267,3,32,8
+    EDITTEXT        IDC_IMEI_2_HEADER_STR,249,3,50,12,ES_AUTOHSCROLL
+    CONTROL         "On/Off",IDC_IMEI_2_HEADER_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,267,3,32,8
+    EDITTEXT        IDC_IMEI_3_HEADER_STR,249,3,50,12,ES_AUTOHSCROLL
+    CONTROL         "On/Off",IDC_IMEI_3_HEADER_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,260,3,32,8
+    EDITTEXT        IDC_IMEI_4_HEADER_STR,249,3,50,12,ES_AUTOHSCROLL
+    CONTROL         "On/Off",IDC_IMEI_4_HEADER_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,260,3,32,8
+    EDITTEXT        IDC_SERIAL_NO_HEADER_STR,249,3,50,12,ES_AUTOHSCROLL
+    CONTROL         "On/Off",IDC_SERIAL_NO_HEADER_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,267,3,32,8
+    EDITTEXT        IDC_ETHERNET_HEADER_STR,249,3,50,12,ES_AUTOHSCROLL
+    CONTROL         "On/Off",IDC_ETHERNET_HEADER_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,267,3,32,8
+    EDITTEXT        IDC_DRMKEY_MCID_HEADER_STR,249,3,50,12,ES_AUTOHSCROLL
+    CONTROL         "On/Off",IDC_DRMKEY_MCID_HEADER_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,260,3,32,8
+    EDITTEXT        IDC_MEID_HEADER_STR,249,3,50,12,ES_AUTOHSCROLL
+    CONTROL         "On/Off",IDC_MEID_HEADER_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,267,3,32,8
+    EDITTEXT        IDC_ESN_HEADER_STR,249,3,50,12,ES_AUTOHSCROLL
+    CONTROL         "On/Off",IDC_ESN_HEADER_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,257,10,32,8
+    GROUPBOX        "DataBase File",-1,7,86,292,90
+    CONTROL         "Load AP DB from DUT",IDC_APDB_FROM_DUT_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,21,101,103,10
+    CONTROL         "Load Modem DB from DUT",IDC_MDDB_FROM_DUT_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,169,103,103,10
+    EDITTEXT        IDC_MD_1_DBFILE_PATH,17,121,225,12,ES_AUTOHSCROLL | ES_READONLY
+    PUSHBUTTON      "MD1_DB",IDC_BTN_MD1,255,122,32,12
+    EDITTEXT        IDC_MD_2_DBFILE_PATH,17,139,225,12,ES_AUTOHSCROLL | ES_READONLY
+    PUSHBUTTON      "MD2_DB",IDC_BTN_MD2,255,141,32,12
+    EDITTEXT        IDC_AP_DBFILE_PATH,17,157,225,12,ES_AUTOHSCROLL | ES_READONLY
+    PUSHBUTTON      "AP_DB",IDC_BTN_AP,255,158,32,12
+    LTEXT           "Log Dir",-1,14,183,29,8
+    EDITTEXT        IDC_LOG_DIR,49,181,226,12,ES_AUTOHSCROLL | ES_READONLY
+    PUSHBUTTON      "...",IDC_BTN_LOG,285,180,14,12
+    PUSHBUTTON      "Save",IDC_BTN_SAVE,63,202,140,17
 END
 
 
@@ -644,7 +629,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 299
         TOPMARGIN, 3
-        BOTTOMMARGIN, 347
+        BOTTOMMARGIN, 232
     END
 END
 #endif    // APSTUDIO_INVOKED
