--- a/SN Writer.rc
+++ b/SN Writer.rc
@@ -342,16 +342,15 @@ BEGIN
     DEFPUSHBUTTON   "OK",IDC_BTN_SCAN_OK,146,286,48,22
 END
 
-IDD_ABOUTSN_DIALOG DIALOG 0, 0, 262, 76
+IDD_ABOUTSN_DIALOG DIALOGEX 0, 0, 262, 76
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "About SN Writer"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,205,7,50,14
     LTEXT           "SN Writer Tool Version : V2.1408.04",IDC_SN_VERSION,42,10,162,8
     LTEXT           "MetaCore DLL 1340.01",IDC_METACOREDLL_VERSION,42,27,104,8
     LTEXT           "MetaApp DLL 1345.01",IDC_METAAPPDLL_VERSION,42,40,104,8
-    LTEXT           "Copyright(C) 2004-2010 MediaTek Inc. All rights reserved.",IDC_STATIC,42,58,170,8
     ICON            IDR_MAINFRAME,IDC_STATIC,13,12,20,20
 END
 
@@ -533,7 +532,7 @@ BEGIN
     LTEXT           "Log Dir",-1,14,183,29,8
     EDITTEXT        IDC_LOG_DIR,49,181,226,12,ES_AUTOHSCROLL | ES_READONLY
     PUSHBUTTON      "...",IDC_BTN_LOG,285,180,14,12
-    PUSHBUTTON      "Save",IDC_BTN_SAVE,63,202,140,17
+    PUSHBUTTON      "Save",IDC_BTN_SAVE,81,202,140,17
 END
 
 
@@ -700,6 +699,11 @@ BEGIN
 END
 
 IDD_SYSTEM_CONFIG_DIALOG1 AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_ABOUTSN_DIALOG AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
