修改log存储路径,文件夹名称添加sn

--- a/Output/SN_Setup.ini
+++ b/Output/SN_Setup.ini
@@ -74,7 +74,7 @@ DrmKey path =
 Hdcp data path = 
 Hdcp cek path = 
 Attestation Key Path = 
-Log Dir = C:\SNWriter_LOG\
+Log Dir = C:\CountryCodeTool_LOG\
 ModemLog = False
 Enable Serial No = True
 Ignore Database Inconsistent = False
