--- a/SN Writer.rc
+++ b/SN Writer.rc
@@ -229,70 +229,71 @@ BEGIN
     LTEXT           "......",IDC_PWD_MSG,7,50,273,23
 END
 
-IDD_SNWRITER_DIALOG DIALOGEX 0, 0, 632, 292
+IDD_SNWRITER_DIALOG DIALOGEX 0, 0, 632, 346
 STYLE DS_SETFONT | DS_MODALFRAME | WS_MINIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "SN Writer"
 FONT 10, "System", 0, 0, 0x1
 BEGIN
-    LTEXT           "ComPort:",IDC_STATIC,5,7,43,9,0,WS_EX_RIGHT
-    EDITTEXT        IDC_COUNT_TOTAL,217,7,100,13,ES_AUTOHSCROLL | ES_READONLY
-    PUSHBUTTON      "System Config",IDC_BTN_SYSCONFIG,465,7,90,31
-    DEFPUSHBUTTON   "Start",IDC_BTN_START,466,47,153,35
-    PUSHBUTTON      "Quit",IDC_BTN_QUIT,561,7,58,30
-    EDITTEXT        IDC_COUNT_PASS,217,24,100,13,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_COUNT_FAIL,217,41,100,13,ES_AUTOHSCROLL | ES_READONLY
-    LTEXT           "Target Type:",IDC_STATIC,11,30,43,9,0,WS_EX_RIGHT
-    LTEXT           "Total:",IDC_STATIC,174,7,27,10
-    LTEXT           "Pass:",IDC_STATIC_PASS,175,25,27,10
-    CONTROL         "Progress1",IDC_PROGRESS_SN,"msctls_progress32",WS_BORDER,2,92,315,10
-    LTEXT           "Fail:",IDC_STATIC,176,40,27,10
-    COMBOBOX        IDC_COMBO_COMPORT,62,7,87,51,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_COMBO_TARGET_TYPE,60,30,87,63,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "...",IDC_OPERATE_INFO,2,105,358,21
-    PUSHBUTTON      "Button1",IDC_BTN_INDITE,85,52,87,35,BS_BITMAP
-    GROUPBOX        "",IDC_STATIC,13,121,473,156
-    EDITTEXT        IDC_TV_TESTITEM,18,129,100,13,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_TV_TESTITEM1,18,145,100,13,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_TV_TESTITEM2,18,161,100,13,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_TV_TESTITEM3,18,179,100,13,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_TV_TESTITEM4,18,195,100,13,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_TV_TESTITEM5,18,213,100,13,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_TV_TESTITEM6,18,231,100,13,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_TV_TESTITEM7,18,249,100,13,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_TV_TESTITEM8,18,264,100,13,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_TV_TESTITEM_TIME,163,129,67,13,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_TV_TESTITEM_STATUS,250,128,67,13,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_TV_TESTITEM_INFO,360,129,125,13,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_TV_TESTITEM_TIME1,163,144,67,13,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_TV_TESTITEM_TIME2,163,161,67,13,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_TV_TESTITEM_TIME3,163,179,67,13,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_TV_TESTITEM_TIME4,163,195,67,13,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_TV_TESTITEM_TIME5,163,213,67,13,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_TV_TESTITEM_TIME6,163,231,67,13,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_TV_TESTITEM_TIME7,163,249,67,13,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_TV_TESTITEM_TIME8,163,264,67,13,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_TV_TESTITEM_INFO1,360,145,125,13,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_TV_TESTITEM_INFO2,360,160,125,13,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_TV_TESTITEM_INFO3,360,177,125,13,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_TV_TESTITEM_INFO4,360,193,125,13,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_TV_TESTITEM_INFO5,360,213,125,13,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_TV_TESTITEM_INFO6,360,231,125,13,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_TV_TESTITEM_INFO7,360,247,125,13,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_TV_TESTITEM_INFO8,360,264,125,13,ES_AUTOHSCROLL | ES_READONLY
-    CONTROL         "",IDC_PROGRESS_STATUS1,"msctls_progress32",WS_BORDER,251,144,66,12
-    CONTROL         "",IDC_PROGRESS_STATUS2,"msctls_progress32",WS_BORDER,251,162,66,12
-    CONTROL         "",IDC_PROGRESS_STATUS3,"msctls_progress32",WS_BORDER,251,179,66,12
-    CONTROL         "",IDC_PROGRESS_STATUS4,"msctls_progress32",WS_BORDER,251,193,66,12
-    CONTROL         "",IDC_PROGRESS_STATUS5,"msctls_progress32",WS_BORDER,251,213,66,12
-    CONTROL         "",IDC_PROGRESS_STATUS6,"msctls_progress32",WS_BORDER,251,231,66,12
-    CONTROL         "",IDC_PROGRESS_STATUS7,"msctls_progress32",WS_BORDER,251,248,66,12
-    CONTROL         "",IDC_PROGRESS_STATUS8,"msctls_progress32",WS_BORDER,251,265,66,12
-    EDITTEXT        IDC_TV_TEST_OK_PERCENT,333,17,55,13,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_TV_TEST_OK_TIME,333,41,55,13,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_TV_TEST_OK_PERCENT2,395,17,55,13,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_TV_TEST_OK_TIME2,396,41,55,13,ES_AUTOHSCROLL | ES_READONLY
-    CONTROL         "",IDC_IMAGE1,"{4C599241-6926-101B-9992-00000B65C6F9}",0x0,515,125,111,142
+    LTEXT           "ComPort:",IDC_STATIC,6,42,43,9,0,WS_EX_RIGHT
+    EDITTEXT        IDC_COUNT_TOTAL,216,36,100,13,ES_AUTOHSCROLL | ES_READONLY
+    PUSHBUTTON      "System Config",IDC_BTN_SYSCONFIG,468,60,90,31
+    DEFPUSHBUTTON   "Start",IDC_BTN_START,468,102,153,35
+    PUSHBUTTON      "Quit",IDC_BTN_QUIT,564,60,58,30
+    EDITTEXT        IDC_COUNT_PASS,216,54,100,13,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_COUNT_FAIL,216,72,100,13,ES_AUTOHSCROLL | ES_READONLY
+    LTEXT           "Target Type:",IDC_STATIC,6,54,43,9,0,WS_EX_RIGHT
+    LTEXT           "Total:",IDC_STATIC,168,42,27,10
+    LTEXT           "Pass:",IDC_STATIC_PASS,168,54,27,10
+    CONTROL         "Progress1",IDC_PROGRESS_SN,"msctls_progress32",WS_BORDER,0,114,315,10
+    LTEXT           "Fail:",IDC_STATIC,168,72,27,10
+    COMBOBOX        IDC_COMBO_COMPORT,60,36,87,51,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBO_TARGET_TYPE,60,54,87,63,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "...",IDC_OPERATE_INFO,0,138,358,21
+    PUSHBUTTON      "Button1",IDC_BTN_INDITE,60,72,87,35,BS_BITMAP
+    GROUPBOX        "",IDC_STATIC,12,162,480,180
+    EDITTEXT        IDC_TV_TESTITEM,18,168,100,13,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_TV_TESTITEM1,18,186,100,13,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_TV_TESTITEM2,18,204,100,13,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_TV_TESTITEM3,18,222,100,13,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_TV_TESTITEM4,18,240,100,13,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_TV_TESTITEM5,18,258,100,13,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_TV_TESTITEM6,18,276,100,13,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_TV_TESTITEM7,18,294,100,13,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_TV_TESTITEM8,18,312,100,13,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_TV_TESTITEM_TIME,162,168,67,13,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_TV_TESTITEM_STATUS,252,168,67,13,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_TV_TESTITEM_INFO,360,168,125,13,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_TV_TESTITEM_TIME1,162,186,67,13,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_TV_TESTITEM_TIME2,162,204,67,13,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_TV_TESTITEM_TIME3,162,222,67,13,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_TV_TESTITEM_TIME4,162,240,67,13,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_TV_TESTITEM_TIME5,162,258,67,13,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_TV_TESTITEM_TIME6,162,276,67,13,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_TV_TESTITEM_TIME7,162,294,67,13,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_TV_TESTITEM_TIME8,162,312,67,13,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_TV_TESTITEM_INFO1,360,186,125,13,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_TV_TESTITEM_INFO2,360,204,125,13,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_TV_TESTITEM_INFO3,360,222,125,13,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_TV_TESTITEM_INFO4,360,240,125,13,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_TV_TESTITEM_INFO5,360,258,125,13,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_TV_TESTITEM_INFO6,360,276,125,13,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_TV_TESTITEM_INFO7,360,294,125,13,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_TV_TESTITEM_INFO8,360,312,125,13,ES_AUTOHSCROLL | ES_READONLY
+    CONTROL         "",IDC_PROGRESS_STATUS1,"msctls_progress32",WS_BORDER,252,186,66,12
+    CONTROL         "",IDC_PROGRESS_STATUS2,"msctls_progress32",WS_BORDER,252,204,66,12
+    CONTROL         "",IDC_PROGRESS_STATUS3,"msctls_progress32",WS_BORDER,252,222,66,12
+    CONTROL         "",IDC_PROGRESS_STATUS4,"msctls_progress32",WS_BORDER,252,240,66,12
+    CONTROL         "",IDC_PROGRESS_STATUS5,"msctls_progress32",WS_BORDER,252,258,66,12
+    CONTROL         "",IDC_PROGRESS_STATUS6,"msctls_progress32",WS_BORDER,252,276,66,12
+    CONTROL         "",IDC_PROGRESS_STATUS7,"msctls_progress32",WS_BORDER,252,294,66,12
+    CONTROL         "",IDC_PROGRESS_STATUS8,"msctls_progress32",WS_BORDER,252,312,66,12
+    EDITTEXT        IDC_TV_TEST_OK_PERCENT,330,42,55,13,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_TV_TEST_OK_TIME,330,60,55,13,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_TV_TEST_OK_PERCENT2,396,42,55,13,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_TV_TEST_OK_TIME2,396,60,55,13,ES_AUTOHSCROLL | ES_READONLY
+    CONTROL         "",IDC_IMAGE1,"{4C599241-6926-101B-9992-00000B65C6F9}",0x0,516,186,111,142
+    CTEXT           "title",IDC_TOOL_CUSTOM_TITLE,108,0,390,24,SS_CENTERIMAGE
 END
 
 IDD_SCANDATA_DIALOG DIALOGEX 0, 0, 236, 316
@@ -572,7 +573,7 @@ BEGIN
         VERTGUIDE, 367
         VERTGUIDE, 535
         TOPMARGIN, 7
-        BOTTOMMARGIN, 277
+        BOTTOMMARGIN, 331
         HORZGUIDE, 30
         HORZGUIDE, 213
         HORZGUIDE, 231
