--- a/Output/SN_Setup.ini
+++ b/Output/SN_Setup.ini
@@ -76,6 +76,9 @@ Hdcp cek path =
 Attestation Key Path = 
 Log Dir = C:\CountryCodeTool_LOG\
 ModemLog = False
+Battery Check = True
+Factoryreset Check = True
+ModelDetails Check = True
 Enable Serial No = True
 Ignore Database Inconsistent = False
 Serial Num From IMEI = False
