--- a/SN Writer.rc
+++ b/SN Writer.rc
@@ -535,6 +535,9 @@ BEGIN
     EDITTEXT        IDC_LOG_DIR,49,181,226,12,ES_AUTOHSCROLL | ES_READONLY
     PUSHBUTTON      "...",IDC_BTN_LOG,285,180,14,12
     PUSHBUTTON      "Save",IDC_BTN_SAVE,81,202,140,17
+    CONTROL         "Check Battery",IDC_CHECK_BATTERY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,30,88,8
+    CONTROL         "Check Factoryreset",IDC_CHECK_FACTORYRESET,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,48,88,8
+    CONTROL         "Check ModelDetails",IDC_CHECK_MODELDETAILS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,66,88,8
 END
 
 
