增加配置界面密码控制

--- a/SN Writer.rc
+++ b/SN Writer.rc
@@ -538,6 +538,7 @@ BEGIN
     CONTROL         "Check Battery",IDC_CHECK_BATTERY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,30,88,8
     CONTROL         "Check Factoryreset",IDC_CHECK_FACTORYRESET,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,48,88,8
     CONTROL         "Check ModelDetails",IDC_CHECK_MODELDETAILS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,66,88,8
+    PUSHBUTTON      "change password",IDC_BTN_CHANGEPW,216,60,86,17
 END
 
 
