add check cpu info

--- a/Output/SN_Setup.ini
+++ b/Output/SN_Setup.ini
@@ -77,7 +77,7 @@ Attestation Key Path =
 Log Dir = C:\CountryCodeTool_LOG\
 ModemLog = False
 Battery Check = True
-Factoryreset Check = True
+Factoryreset Check = False
 ModelDetails Check = True
 Enable Serial No = True
 Ignore Database Inconsistent = False
