add offline test

--- a/Output/CustomConfig.ini
+++ b/Output/CustomConfig.ini
@@ -6,3 +6,5 @@ DB_SQLPassword = 123456
 DB_Port = 1433 
 DB_Name = DBTMTS 
 SoftwarePN = 1234567890 
+offline_CCFlag = HK
+offline_ModelDetails = TP706111HK
