--- a/Output/SN_Setup.ini
+++ b/Output/SN_Setup.ini
@@ -79,6 +79,7 @@ ModemLog = False
 Battery Check = True
 Factoryreset Check = False
 ModelDetails Check = True
+Offline Test = False
 Enable Serial No = True
 Ignore Database Inconsistent = False
 Serial Num From IMEI = False
