--- a/Output/CustomConfig.ini
+++ b/Output/CustomConfig.ini
@@ -6,5 +6,5 @@ DB_SQLPassword = 123456
 DB_Port = 1433 
 DB_Name = DBTMTS 
 SoftwarePN = 1234567890 
-offline_CCFlag = DE
-offline_ModelDetails = TP706111DE
+offline_CCFlag = CN
+offline_ModelDetails = TP706111CN
