--- a/Output/CustomConfig.ini
+++ b/Output/CustomConfig.ini
@@ -7,4 +7,4 @@ DB_Port = 1433
 DB_Name = DBTMTS 
 SoftwarePN = 1234567890 
 offline_CCFlag = CN
-offline_ModelDetails = TP706111CN
+offline_ModelDetails = TP7061A11CN
