--- a/Output/SN_Setup.ini
+++ b/Output/SN_Setup.ini
@@ -78,7 +78,7 @@ Log Dir = C:\CountryCodeTool_LOG\
 ModemLog = False
 Battery Check = True
 Factoryreset Check = False
-ModelDetails Check = True
+ModelDetails Check = False
 Offline Test = True
 Enable Serial No = True
 Ignore Database Inconsistent = False
