增加设置是否需要密码配置

--- a/Output/SN_Setup.ini
+++ b/Output/SN_Setup.ini
@@ -80,6 +80,7 @@ Battery Check = True
 Factoryreset Check = False
 ModelDetails Check = False
 Offline Test = True
+Password Check = False
 Enable Serial No = True
 Ignore Database Inconsistent = False
 Serial Num From IMEI = False
