电量检测以及控制

--- a/Output/CustomConfig.ini
+++ b/Output/CustomConfig.ini
@@ -8,3 +8,5 @@ DB_Name = DBTMTS
 SoftwarePN = 1234567890 
 offline_CCFlag = CN
 offline_ModelDetails = TP7061A11CN
+Battery Min = 30 
+Battery Max = 79 
