--- a/Output/CustomConfig.ini
+++ b/Output/CustomConfig.ini
@@ -1,12 +1,13 @@
 [System Setup]
 DB_Machine = 
-DB_SQLSrc = 192.168.12.225 
+DB_SQLSrc = 192.168.12.206 
 DB_SQLUser = root 
 DB_SQLPassword = 123456 
 DB_Port = 1433 
 DB_Name = DBTMTS 
 SoftwarePN = 1234567890 
-offline_CCFlag = CN
-offline_ModelDetails = TP7061A11CN
+offline_CCFlag = RU
+offline_ModelDetails = TP7061B11RU
 Battery Min = 30 
-Battery Max = 79 
+Battery Max = 70 
+Delete_CountryCode = False 
