--- a/Output/SN_Setup.ini
+++ b/Output/SN_Setup.ini
@@ -76,9 +76,9 @@ Hdcp cek path =
 Attestation Key Path = 
 Log Dir = C:\CountryCodeTool_LOG\
 ModemLog = False
-Battery Check = True
-Factoryreset Check = False
-ModelDetails Check = False
+Battery Check = False
+Factoryreset Check = True
+ModelDetails Check = True
 Offline Test = True
 Password Check = False
 Enable Serial No = True
