--- a/Output/CustomConfig.ini
+++ b/Output/CustomConfig.ini
@@ -6,8 +6,8 @@ DB_SQLPassword = 123456
 DB_Port = 1433 
 DB_Name = DBTMTS 
 SoftwarePN = 1234567890 
-offline_CCFlag = RU
-offline_ModelDetails = TP7061B11RU
+offline_CCFlag = CN
+offline_ModelDetails = TP7061B11CN
 Battery Min = 3600 
 Battery Max = 4000 
 Delete_CountryCode = False 
