--- a/Output/SN_Setup.ini
+++ b/Output/SN_Setup.ini
@@ -76,8 +76,8 @@ Hdcp cek path =
 Attestation Key Path = 
 Log Dir = C:\CountryCodeTool_LOG\
 ModemLog = False
-Battery Check = False
-Factoryreset Check = True
+Battery Check = True
+Factoryreset Check = False
 ModelDetails Check = True
 Offline Test = True
 Password Check = False
