修改扫描SN自动写码.翻译部分中文

--- a/SN Writer.rc
+++ b/SN Writer.rc
@@ -235,18 +235,18 @@ EXSTYLE WS_EX_APPWINDOW
 CAPTION "SN Writer"
 FONT 10, "System", 0, 0, 0x1
 BEGIN
-    LTEXT           "ComPort:",IDC_STATIC,6,42,43,9,0,WS_EX_RIGHT
+    LTEXT           "ComPort:",IDC_STATIC_comport,6,42,43,9,0,WS_EX_RIGHT
     EDITTEXT        IDC_COUNT_TOTAL,216,36,100,13,ES_AUTOHSCROLL | ES_READONLY
     PUSHBUTTON      "System Config",IDC_BTN_SYSCONFIG,468,60,90,31
     DEFPUSHBUTTON   "Start",IDC_BTN_START,468,102,153,35
     PUSHBUTTON      "Quit",IDC_BTN_QUIT,564,60,58,30
     EDITTEXT        IDC_COUNT_PASS,216,54,100,13,ES_AUTOHSCROLL | ES_READONLY
     EDITTEXT        IDC_COUNT_FAIL,216,72,100,13,ES_AUTOHSCROLL | ES_READONLY
-    LTEXT           "Target Type:",IDC_STATIC,6,54,43,9,0,WS_EX_RIGHT
-    LTEXT           "Total:",IDC_STATIC,168,42,27,10
+    LTEXT           "Target Type:",IDC_STATIC_type,6,54,43,9,0,WS_EX_RIGHT
+    LTEXT           "Total:",IDC_STATIC_total,168,42,27,10
     LTEXT           "Pass:",IDC_STATIC_PASS,168,54,27,10
     CONTROL         "Progress1",IDC_PROGRESS_SN,"msctls_progress32",WS_BORDER,0,114,315,10
-    LTEXT           "Fail:",IDC_STATIC,168,72,27,10
+    LTEXT           "Fail:",IDC_STATIC_fail,168,72,27,10
     COMBOBOX        IDC_COMBO_COMPORT,60,36,87,51,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     COMBOBOX        IDC_COMBO_TARGET_TYPE,60,54,87,63,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "...",IDC_OPERATE_INFO,0,138,358,21
@@ -521,7 +521,7 @@ BEGIN
     CONTROL         "On/Off",IDC_MEID_HEADER_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,267,3,32,8
     EDITTEXT        IDC_ESN_HEADER_STR,249,3,50,12,ES_AUTOHSCROLL
     CONTROL         "On/Off",IDC_ESN_HEADER_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,257,10,32,8
-    GROUPBOX        "DataBase File",-1,7,86,292,90
+    GROUPBOX        "DataBase File",IDC_LOG_DIR_NAME,7,86,292,90
     CONTROL         "Load AP DB from DUT",IDC_APDB_FROM_DUT_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,21,101,103,10
     CONTROL         "Load Modem DB from DUT",IDC_MDDB_FROM_DUT_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,169,103,103,10
     EDITTEXT        IDC_MD_1_DBFILE_PATH,17,121,225,12,ES_AUTOHSCROLL | ES_READONLY
@@ -530,8 +530,8 @@ BEGIN
     PUSHBUTTON      "MD2_DB",IDC_BTN_MD2,255,141,32,12
     EDITTEXT        IDC_AP_DBFILE_PATH,17,157,225,12,ES_AUTOHSCROLL | ES_READONLY
     PUSHBUTTON      "AP_DB",IDC_BTN_AP,255,158,32,12
-    LTEXT           "Log Dir",-1,14,183,29,8
-    EDITTEXT        IDC_LOG_DIR,49,181,226,12,ES_AUTOHSCROLL | ES_READONLY
+    LTEXT           "Log Dir",IDC_LOG_DIR_title,6,183,60,8
+    EDITTEXT        IDC_LOG_DIR,66,181,209,12,ES_AUTOHSCROLL | ES_READONLY
     PUSHBUTTON      "...",IDC_BTN_LOG,285,180,14,12
     PUSHBUTTON      "Save",IDC_BTN_SAVE,81,202,140,17
     CONTROL         "Check Battery",IDC_CHECK_BATTERY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,30,88,8
