--- a/Output/SN_Setup.ini
+++ b/Output/SN_Setup.ini
@@ -76,7 +76,7 @@ Hdcp cek path =
 Attestation Key Path = 
 Log Dir = C:\CountryCodeTool_LOG\
 ModemLog = False
-Battery Check = True
+Battery Check = False
 Factoryreset Check = False
 ModelDetails Check = False
 Offline Test = True
